--- a/mynativeapplication/build.gradle
+++ b/mynativeapplication/build.gradle
@@ -40,7 +40,7 @@ android {
         doNotStrip '*/arm64-v8a/*.so'
     }
 
-    
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -52,10 +52,11 @@ android {
 
 dependencies {
 
-
-    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+//    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation project(path: ':unityLibrary')
-    // if not foudn interface , add below line
+    // if not found interface , add below line
     implementation fileTree(dir: project(':unityLibrary').getProjectDir().toString() + ('\\libs'), include: ['*.jar'])
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
